# Semigroups

./: .ccls  .clang-format  .codecov.yml  .codespellrc  .covignore  .gaplint.yml  .gaplint_ignore  .gitignore  .gitmodules  .hgignore  .hgtags  .mailmap  .release  .travis.yml  BUGS  CHANGELOG  CHANGELOG.md  CHANGES  CONTRIBUTING.md  GNUmakefile.in  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.gappkg  Makefile.in  NOTES.tmp  PackageInfo.g  README  README.html  README.md  README.txt  RENAMED  TODO.md  VERSIONS  autogen.sh  azure-pipelines.yml  code-coverage-test.py  configure  configure.ac  (+14 more)
.github/workflows/: GAP.yml  ci.yml  clang-format-check.yml  codespell.yml  config-options.yml  cpplint.yml  extended.yml  lint.yml  manual.yml  release-pkg.yml  release.yml  standard.yml  valgrind.yml  workspaces.yml
_data/: package.yml
ci/: azure-gap.sh  docker-install-deps.sh  docker-test.sh  docker.sh  install-in-docker-container.sh  launch-docker-container.sh  run-gap-testbugfix.g  run-gap-testextreme.g  run-gap-testinstall.g  run-gap-teststandard.g  run-tests.sh
data/doc/: greens.pickle
data/tst/: bipart4  pperm10  testdata  testinstall.pickle  trans3-old
doc/: :wq  MONOID.bib  attr.xml  attract.xml  attributes-acting.xml  attributes-inverse.xml  attributes.xml  attrinv.xml  bibliography.xml  bipart.xml  bipartition.xml  blocks.xml  boolmat.xml  cartan.xml  chap0.html  chap0.txt  chap0_mj.html  chap1.html  chap1.txt  chap1.xml  chap10.html  chap10.txt  chap10.xml  chap10_mj.html  chap11.html  chap11.txt  chap11.xml  chap11_mj.html  chap12.html  chap12.txt  chap12_mj.html  chap13.html  chap13.txt  chap13_mj.html  chap14.html  chap14.txt  chap14_mj.html  chap15.html  chap15.txt  chap15_mj.html  (+185 more)
etc/: code-coverage-test-gap.py  cpplint.sh  gaplint.sh  lint.sh  tst-local-vars.py
examples/: T3ConjugacyClassReps  inverse.citrus  nonabelian_groups_10.citrus  nonabelian_groups_12.citrus  nonabelian_groups_14.citrus  nonabelian_groups_16.citrus  nonabelian_groups_18.citrus  nonabelian_groups_20.citrus  nonabelian_groups_21.citrus  nonabelian_groups_22.citrus  nonabelian_groups_24.citrus  nonabelian_groups_26.citrus  nonabelian_groups_27.citrus  nonabelian_groups_28.citrus  nonabelian_groups_30.citrus  nonabelian_groups_32.citrus  nonabelian_groups_34.citrus  nonabelian_groups_36.citrus  nonabelian_groups_38.citrus  nonabelian_groups_39.citrus  nonabelian_groups_40.citrus  nonabelian_groups_42.citrus  nonabelian_groups_44.citrus  nonabelian_groups_46.citrus  nonabelian_groups_48.citrus  nonabelian_groups_50.citrus  nonabelian_groups_52.citrus  nonabelian_groups_54.citrus  nonabelian_groups_55.citrus  nonabelian_groups_56.citrus  nonabelian_groups_57.citrus  nonabelian_groups_58.citrus  nonabelian_groups_6.citrus  nonabelian_groups_60.citrus  nonabelian_groups_62.citrus  nonabelian_groups_63.citrus  nonabelian_groups_64.citrus  nonabelian_groups_8.citrus  syntactic_new.citrus  syntactic_new.semigroups  (+2 more)
gap/: acting.gd  acting.gi  attributes-acting.gd  attributes-acting.gi  attributes-exhaust.gi  attributes-generic.gi  attributes-inverse.gd  attributes-inverse.gi  attributes-non-exhaust.gi  attributes.gd  attributes.gi  autos.gd  autos.gi  binary.gd  binary.gi  bipartition.gd  bipartition.gi  blocks.gd  blocks.gi  boolean.gd  boolean.gi  closure.gd  closure.gi  compat.g  config  cong-by-gen-pairs.g  cong-inverse.gd  cong-inverse.gi  cong-pairs.gd  cong-pairs.gi  cong-rees.gd  cong-rees.gi  cong-reesmat.gd  cong-reesmat.gi  cong-semilattice.gd  cong-semilattice.gi  cong-simple.gd  cong-simple.gi  cong-univ.gd  cong-univ.gi  (+214 more)
gap/Acting/: orbits.gd
gap/Attributes/: attributes-inverse.gd  attributes-inverse.gi  attributes.gi  factor.gi  isomorph.gi  maximal.gd  maximal.gi  normalizer.gi  properties.gd  properties.gi
gap/Elements/: bipartition.gd  bipartition.gi  boolmat.gd  boolmat.gi  maxplusmat.gd  maxplusmat.gi  pbr.gd  pbr.gi  pfmat.gd  semiringmat.gi  star.gd  star.gi
gap/Fp/: freeband.gi
gap/Greens/: greens-acting.gd  greens-generic.gd  greens-generic.gi
gap/Ideals/: ideals-generic.gi  ideals.gd
gap/Main/: acting.gi  orbits.gi
gap/Semigroups/: examples.gd  examples.gi  froidure-pin.gd  froidure-pin.gi  semibipart.gi  semiboolmat.gd  semiboolmat.gi  semigroups.gd  semigroups.gi  semimaxplus.gd  semipfmat.gi  semipperm.gi  semiringmat.gi  semitrans.gd
gapbind14/: .ccls  .gitignore  CPPLINT.cfg  README.md
gapbind14-0.0.1/: CPPLINT.cfg
m4/: ac_find_gap.m4  ax_check_hpcombi.m4  ax_check_libsemigroup.m4  find_gap.m4
scripts/: code-coverage-test.py  drone.sh  make-deps.py  release.py  test-semigroups.py  test-workspaces.sh  test.py  travis-build-dependencies.sh  travis-build-semigroups.sh  travis-build.sh  travis-coverage.py  travis-test.sh
src/: .clang-format  CPPLINT.cfg  basics.h  bipart.cc  bipart.cpp  bipart.h  bipart.hh  bipart.hpp  boolean.cc  boolean.h  citrus.c  citrus.h  cong.cpp  cong.hpp  conglatt.cpp  conglatt.hpp  congpairs.cc  congpairs.h  converter.cc  converter.h  data.cc  data.h  elements.h  fincong.cc  fincong.h  froidure-pin-base.cpp  froidure-pin-bipart.cpp  froidure-pin-bmat.cpp  froidure-pin-fallback.cpp  froidure-pin-fallback.hpp  froidure-pin-matrix.cpp  froidure-pin-max-plus-mat.cpp  froidure-pin-min-plus-mat.cpp  froidure-pin-pbr.cpp  froidure-pin-pperm.cpp  froidure-pin-transf.cpp  froidure-pin.cpp  froidure-pin.hpp  fropin.cc  fropin.h  (+83 more)
stylesheets/: styles.css
tst/: 2012_07_23_3_greens.gi  2012_07_23_4_greens.gi  2012_07_23_5_greens.gi  2012_07_24_1_greens.gi  2012_07_27_1_regular.gi  attributes-inverse.tst  attributes.tst  autos1.tst  autos2.tst  autos3.tst  bipartition.tst  character-tables.tst  closure.tst  cong_no_smallsemi.tst  cong_smallsemi.tst  congruence_smallsemi.tst  d.tst  data.tst  digraph.tst  everyfunction-new.tst  everyfunction.tst  examples.tst  factor.tst  freeband.tst  freeinverse.tst  graph-inverse.tst  graphlib.g  greens-0.999.tst  greens.tst  h.tst  ideals.tst  install_grape.tst  install_no_grape.tst  install_with_grape.tst  installtest.g  inverse-cong.tst  inverse-new.tst  inverse.tst  l.tst  matrix.tst  (+33 more)
(+656 files in other folders)
